--- a/index.html
+++ b/index.html
@@ -1,11 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Portfolio</title>
-  </head>
-  <body>
-    <h1> My Portfolio </h1>
-  </body>
+    <link rel="stylesheet" href="./style.css">
+</head>
+
+<body>
+  <h1> MY PORTFOLIO </h1>
+  <div>   <a href="./index.html"> Home </a> | 
+            <a href="./experience.html"> Experience </a> | 
+            <a href="./contact.html"> Contact </a>
+  </div><br>
+
+  <img width="500px" src="./image/448544535_3363374223965074_3527421289178503466_n.jpg" alt="My profile">
+  <h2>นายศุภฤกษ์ เขื่อนเพชร </h2>
+  <p>
+    สวัสดีครับ ผมชื่อ เบส <br>
+    ศึกษาอยู่ที่มหาวิทยาลัยเชียงใหม่ คณะวิศกรรมศาสตร์ สาขาวิศวกรรมคอมพิวเตอร์
+  </p>
+
+  <h3> SKILL </h3>
+  <p> ผมมีความรู้ในการเขียนโปรแกรมภาษา C++ ,HTML และ PYTHON ในระดับพื้นฐาน</p>
+</body>
+
 </html>
