--- a/contact.html
+++ b/contact.html
@@ -14,9 +14,10 @@
             <a href="./contact.html"> Contact </a>
   </div><br>
 
-  <img style = "align-items: center;" width="500px" src="./image/447830123_478436531379860_5097937317442711404_n.jpg" alt="" >
-  <p>  <a target="_blank" href="https://outlook.office365.com/mail/drafts"> Email : suphaloek_khueanphet@cmu.ac.th</a><br><br>
-    
+  <img style = "align-items: center;" width="500px" src="./image/447830123_478436531379860_5097937317442711404_n.jpg" alt="" ><br>
+
+  <p> <a target="_blank" href="https://outlook.office365.com/mail/drafts"> Email : suphaloek_khueanphet@cmu.ac.th</a><br><br>
+  <a target="_blank" href="https://www.facebook.com/profile.php?id=100005690235251&locale=th_TH" >FB : Suphaloek Khueanphet</a><br><br>
         Tel : 063-875-2325
   </p>
 </body>
