--- a/experience.html
+++ b/experience.html
@@ -14,12 +14,18 @@
             <a href="./contact.html"> Contact </a>
   </div><br>
 
-  <img width="500px" src="./image/302476888_1510030699434582_1657868133456348827_n.jpg" alt=""><br>
-  <h2> STEM & microcontroller Project </h2>
-  <p>   ได้รับรางวัลระดับเหรียญทอง เข้าร่วมการแข่งขันโครงงานสะเต็มศึกษาและกล่องสมองกล <br>
-        โดยใช้ทักษะการเขียนโปรแกรมภาษา C++ กับร่วมกับ arduino IDE ในการใช้สร้างนวัตกรรมขึ้นมาแต่ก็น่าเสียดายที่ยังไม่ถึงขั้นติดอันดับ TOP 1-3 ทีมแรกได้</p>
+  <img width="800px" src="./image/302476888_1510030699434582_1657868133456348827_n.jpg" alt="">
+  <h2> ได้รับรางวัลระดับเหรียญทอง <br>
+    STEM & microcontroller Project </h2>
+  <p>   <br>เข้าร่วมการแข่งขันโครงงานสะเต็มศึกษาและกล่องสมองกล <br>
+        โดยใช้ทักษะการเขียนโปรแกรมภาษา C++ กับร่วมกับ arduino IDE ในการใช้สร้างนวัตกรรมขึ้นมาแต่ก็น่าเสียดายที่ยังไม่ถึงขั้นติดอันดับ TOP 1-3 ทีมแรกได้<br><br></p><br>
 
+  <img width="800px" src="./image/275888288_4650507395055462_3396961197971168400_n.jpg" alt="">
+  <h2>ได้รับรางวัลรองชนะเลิศอันดับ 2<br>
+    การประกวดผลิตสื่ออินโฟกราฟิก DigiFam Awards ปี 3 </h2>
+  <p> <br>โดยใช้โปรแกรม Photoshop ในการออกแบบผลงานในการเข้าร่วมประกวดแข่งขัน <br><br></p><br>
+<img width="800px" src="./image/379571531_329301092901489_8913325144394713102_n.jpg" alt="">
   <h2> Art </h2>
-  <p>  เวลาว่างๆผมชอบ เล่นเกมคลายเครียด ฟังเพลง และก็ใช้เวลากับการนอนพักผ่อนเป็นส่วนใหญ่ </p>
+  <p>  <br>เวลาว่างๆผมชอบเล่นเกมคลายเครียด ฟังเพลง และก็ใช้เวลากับการนอนพักผ่อนเป็นส่วนใหญ่<br><br> </p>
 </body>
 </html>
