--- a/index.html
+++ b/index.html
@@ -14,15 +14,16 @@
             <a href="./contact.html"> Contact </a>
   </div><br>
 
-  <img width="500px" src="./image/448544535_3363374223965074_3527421289178503466_n.jpg" alt="My profile">
+  <img width="500px" src="./image/448544535_3363374223965074_3527421289178503466_n.jpg" alt="My profile"><br>
+  
   <h2>นายศุภฤกษ์ เขื่อนเพชร </h2>
-  <p>
-    สวัสดีครับ ผมชื่อ เบส <br>
+  <p><br>สวัสดีครับ ผมชื่อ เบส <br> 
     ศึกษาอยู่ที่มหาวิทยาลัยเชียงใหม่ คณะวิศกรรมศาสตร์ สาขาวิศวกรรมคอมพิวเตอร์
+    <br><br>
   </p>
 
   <h3> SKILL </h3>
-  <p> ผมมีความรู้ในการเขียนโปรแกรมภาษา C++ ,HTML และ PYTHON ในระดับพื้นฐาน</p>
+  <p> <br>ผมมีความรู้ในการเขียนโปรแกรมภาษา C++ ,HTML และ PYTHON ในระดับพื้นฐาน<br><br></p>
 </body>
 
 </html>
