--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   
   <h2>นายศุภฤกษ์ เขื่อนเพชร </h2>
   <p><br>สวัสดีครับ ผมชื่อ เบส <br> 
-    ศึกษาอยู่ที่มหาวิทยาลัยเชียงใหม่ คณะวิศกรรมศาสตร์ สาขาวิศวกรรมคอมพิวเตอร์
+    ศึกษาอยู่ที่มหาวิทยาลัยเชียงใหม่ คณะวิศวกรรมศาสตร์ สาขาวิศวกรรมคอมพิวเตอร์
     <br><br>
   </p>
 
