--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
 
   <img style = "align-items: center;" width="500px" src="./image/447830123_478436531379860_5097937317442711404_n.jpg" alt="" ><br>
 
-  <p> <a target="_blank" href="https://outlook.office365.com/mail/drafts"> Email : suphaloek_khueanphet@cmu.ac.th</a><br><br>
+  <p> <a target="_blank" href="mailto:suphaloek_khueanphet@cmu.ac.th"> Email : suphaloek_khueanphet@cmu.ac.th</a><br><br>
   <a target="_blank" href="https://www.facebook.com/profile.php?id=100005690235251&locale=th_TH" >FB : Suphaloek Khueanphet</a><br><br>
         Tel : 063-875-2325
   </p>
